Bug 28335 - Cursor corruption caused by commit 9b8c4a0b215e603497
Summary: Cursor corruption caused by commit 9b8c4a0b215e603497
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-31 11:55 UTC by Jeremy Bowers
Modified: 2017-07-24 23:07 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Move non-phys cursors into the GTT (1.84 KB, patch)
2010-06-02 01:25 UTC, Chris Wilson
no flags Details | Splinter Review

Description Jeremy Bowers 2010-05-31 11:55:24 UTC
Git head as I report this bug is a1786bd270. When I build that, I get graphical corruption in the X cursor; random horizontal lines will be missing from the cursor, then come streaming in over the course of a second or two. (That is an honest time estimate, it really does take a while.) This replays again for each different cursor that appears (arrow, text entry, etc) and really ruins animated cursors as each frame is very badly mangled.

git bisect appears to finger 9b8c4a0b215e603497, "Avoid moving from CPU domain during pwrite". I current have a git head build running on a1786bd270 with 9b8c4a0b215e603497 reverted, and I am not seeing the problem I describe.

lspci reports my card as a "Intel Corporation Mobile 4 Series Chipset Integrated Graphics Controller (rev 07)".
Comment 1 Chris Wilson 2010-05-31 12:04:21 UTC
This implies that we missing a clflush on the cursors, which in turn implies that we not specifying the correct domain. Hmm, I will read over the code unless somebody has a better idea.
Comment 2 Gordon Jin 2010-05-31 18:57:27 UTC
Moving to DRM module, as this commit is in drm-intel-next kernel.
Comment 3 Chris Wilson 2010-06-02 01:25:35 UTC
Created attachment 36003 [details] [review]
Move non-phys cursors into the GTT
Comment 4 Jeremy Bowers 2010-06-02 18:07:51 UTC
I put that patch on top of e3a815fcd380 and it Works For Me (TM). If I ought to drop back to a1786bd270 and test let me know.
Comment 5 Chris Wilson 2010-06-03 00:55:35 UTC
(In reply to comment #4)
> I put that patch on top of e3a815fcd380 and it Works For Me (TM). If I ought to
> drop back to a1786bd270 and test let me know.

No, that's fine. The patch seems to be correct, so it is now just a matter of time whilst it works it way upstream into Linus' tree.
Comment 6 Chris Wilson 2010-06-06 05:59:43 UTC
Included in 2.6.35-rc2.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.